--- a/index.html
+++ b/index.html
@@ -340,3 +340,280 @@
 
 </body>
 </html>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Sadhana Tracker</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #000080;
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .container { width: 95%; max-width: 560px; }
+    .card {
+      background: white;
+      padding: 14px;
+      border-radius: 10px;
+      color: #000080;
+      margin-bottom: 10px;
+    }
+    h3 { margin: 4px 0 8px; text-align:center; }
+    label { display:block; margin-top:8px; font-size:13px; }
+    input, select {
+      width:100%; padding:6px; margin-top:4px;
+    }
+    button {
+      width:100%; margin-top:10px;
+      padding:8px; background:#000080;
+      color:white; border:none;
+    }
+    .tabs {
+      display:flex; margin-bottom:8px;
+      border-radius:8px; overflow:hidden;
+    }
+    .tab {
+      flex:1; text-align:center;
+      padding:8px; cursor:pointer;
+      background:#e6e6e6;
+      font-weight:bold;
+    }
+    .tab.active {
+      background:#000080; color:white;
+    }
+    table {
+      width:100%; border-collapse:collapse;
+      font-size:12px;
+    }
+    th, td {
+      border:1px solid #ccc;
+      padding:4px; text-align:center;
+    }
+    .neg { background:#ffd6d6; }
+    .badWeek { background:#ffb3b3; font-weight:bold; }
+  </style>
+</head>
+
+<body>
+<div class="container">
+
+  <div class="card" id="loading">Checking session…</div>
+
+  <div class="card" id="login" style="display:none;">
+    <h3>Login</h3>
+    <input id="email" placeholder="Email">
+    <input id="password" type="password">
+    <button onclick="login()">Login</button>
+  </div>
+
+  <div class="card" id="profile" style="display:none;">
+    <h3>Profile Setup</h3>
+    <label>Name</label>
+    <input id="pname">
+    <label>Chanting Category</label>
+    <select id="pcat">
+      <option value="">Select</option>
+      <option>0-4</option>
+      <option>5-9</option>
+      <option>10-16</option>
+    </select>
+    <button onclick="saveProfile()">Save</button>
+  </div>
+
+  <div id="app" style="display:none;">
+    <div class="tabs">
+      <div class="tab active" id="tabS">Sadhana</div>
+      <div class="tab" id="tabR">Reports</div>
+    </div>
+
+    <!-- Sadhana -->
+    <div class="card" id="sadhana">
+      <h3>Daily Sadhana</h3>
+      <label>Date</label>
+      <select id="date"></select>
+
+      <label>Sleep</label><input type="time" id="sleep">
+      <label>Wake</label><input type="time" id="wake">
+      <label>Chanting</label><input type="time" id="chant">
+      <label>Reading (min)</label><input type="number" id="read">
+      <label>Hearing (min)</label><input type="number" id="hear">
+      <label>Day Sleep (min)</label><input type="number" id="daysleep">
+
+      <button onclick="submit()">Submit</button>
+      <button onclick="logout()">Logout</button>
+    </div>
+
+    <!-- Reports -->
+    <div class="card" id="reports" style="display:none;">
+      <h3>Weekly Report</h3>
+      <div id="reportTable"></div>
+    </div>
+  </div>
+</div>
+
+<script>
+/* ================= FIREBASE ================= */
+firebase.initializeApp({
+  apiKey: "AIzaSyDbRy8ZMJAWeTyZVnTphwRIei6jAckagjA",
+  authDomain: "sadhana-tracker-b65ff.firebaseapp.com",
+  projectId: "sadhana-tracker-b65ff"
+});
+const auth = firebase.auth();
+const db = firebase.firestore();
+let uid;
+
+/* ================= AUTH FLOW ================= */
+auth.onAuthStateChanged(async u => {
+  hideAll();
+  if (!u) { login.style.display="block"; return; }
+  uid = u.uid;
+  const doc = await db.collection("users").doc(uid).get();
+  if (!doc.exists || !doc.data().chantingCategory) {
+    profile.style.display="block"; return;
+  }
+  app.style.display="block";
+  initDates();
+  loadReport();
+});
+
+/* ================= UI HELPERS ================= */
+function hideAll(){
+  loading.style.display="none";
+  login.style.display="none";
+  profile.style.display="none";
+  app.style.display="none";
+}
+
+tabS.onclick=()=>{
+  sadhana.style.display="block";
+  reports.style.display="none";
+  tabS.classList.add("active");
+  tabR.classList.remove("active");
+};
+tabR.onclick=()=>{
+  sadhana.style.display="none";
+  reports.style.display="block";
+  tabR.classList.add("active");
+  tabS.classList.remove("active");
+};
+
+/* ================= DATE INIT ================= */
+function initDates(){
+  if (date.options.length) return;
+  for (let i=0;i<3;i++){
+    const d=new Date(); d.setDate(d.getDate()-i);
+    const o=document.createElement("option");
+    o.value=d.toISOString().slice(0,10);
+    o.textContent=o.value;
+    date.appendChild(o);
+  }
+}
+
+/* ================= SUBMIT ================= */
+async function submit(){
+  await db.collection("users").doc(uid)
+    .collection("sadhana").doc(date.value)
+    .set({
+      sleep:sleep.value,
+      wake:wake.value,
+      chant:chant.value,
+      read:+read.value,
+      hear:+hear.value,
+      daysleep:+daysleep.value
+    },{merge:true});
+  loadReport();
+}
+
+/* ================= SCORING (ISOLATED) ================= */
+function scoreSleep(t){
+  if (!t) return -5;
+  if (t<="22:30") return 25;
+  if (t<="22:35") return 20;
+  if (t<="22:40") return 15;
+  if (t<="22:45") return 10;
+  if (t<="22:50") return 5;
+  if (t<="22:55") return 0;
+  return -5;
+}
+function scoreWake(t){
+  if (!t) return -5;
+  if (t<="05:05") return 25;
+  if (t<="05:10") return 20;
+  if (t<="05:15") return 15;
+  if (t<="05:20") return 10;
+  if (t<="05:25") return 5;
+  if (t<="05:30") return 0;
+  return -5;
+}
+function scoreChant(t){
+  if (!t) return -5;
+  if (t<="09:00") return 25;
+  if (t<="09:30") return 20;
+  if (t<="11:00") return 15;
+  if (t<="14:30") return 10;
+  if (t<="17:00") return 5;
+  if (t<="19:00") return 0;
+  return -5;
+}
+function scoreRead(m){
+  if (m>=30) return 25;
+  if (m>=25) return 20;
+  if (m>=20) return 15;
+  if (m>=15) return 10;
+  if (m>=10) return 5;
+  if (m>=5) return 0;
+  return -5;
+}
+function scoreDaySleep(m){
+  if (m<=60) return 25;
+  return -5;
+}
+
+/* ================= REPORT ================= */
+async function loadReport(){
+  const snap = await db.collection("users").doc(uid).collection("sadhana").get();
+  let html="<table><tr><th>Date</th><th>Total</th></tr>";
+  let weekTotal=0;
+  snap.forEach(d=>{
+    const v=d.data();
+    const total =
+      scoreSleep(v.sleep) +
+      scoreWake(v.wake) +
+      scoreChant(v.chant) +
+      scoreRead(v.read) +
+      scoreRead(v.hear) +
+      scoreDaySleep(v.daysleep);
+    weekTotal+=total;
+    html+=`<tr class="${total<0?"neg":""}">
+      <td>${d.id}</td><td>${total}</td></tr>`;
+  });
+  html+=`<tr class="${weekTotal<20?"badWeek":""}">
+    <th>Weekly Total</th><th>${weekTotal}</th></tr></table>`;
+  reportTable.innerHTML=html;
+}
+
+/* ================= AUTH ACTIONS ================= */
+function login(){ auth.signInWithEmailAndPassword(email.value,password.value); }
+function logout(){ auth.signOut(); }
+async function saveProfile(){
+  await db.collection("users").doc(uid).set({
+    name:pname.value,
+    chantingCategory:pcat.value
+  },{merge:true});
+  app.style.display="block";
+}
+</script>
+</body>
+</html>
